fix: api correctness
